--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Mon train sera-t-il &agrave; l'heure ??</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:300,100"/>
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:300"/>
 		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="shortcut icon"  type="image/png" href="about:blank" />
+		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	<body>
 
@@ -30,6 +30,8 @@
 		</div>
 
 		<footer></footer>
+
+		<canvas></canvas>
 
 		<script src="data.json"></script>
 		<script src="assets/js/app.js"></script>
