Footer with explanations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Mon train sera-t-il &agrave; l'heure ??</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab:300"/>
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" />
+
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
@@ -27,6 +29,16 @@
 			</div>
 
 			<p id="result"></p>
+
+			<p id="infos">
+				Est considéré comme en retard :<br />
+				- un train arrivant 5 minutes après l'heure prévue pour un trajet de moins de 1h30.<br />
+				- un train affichant plus de 10 minutes de retard pour un trajet d'une durée de 1h30 à 3 heures.<br />
+				- un train enregistrant un retard de plus de 15 minutes au delà de 3 heures de voyage.<br />
+				<br />
+				Donn&eacute;es issues de <a href="http://ressources.data.sncf.com/explore/dataset/regularite-tgv-a-larrivee/">http://ressources.data.sncf.com/explore/dataset/regularite-tgv-a-larrivee/</a><br />
+				Dernière mise à jour: 12/06/2014
+			</p>
 		</div>
 
 		<footer></footer>
