--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<div id="wrapper" class="clearfix">
-			<h1>Mon <select id="train" placeholder="TGV" onchange=""></select> sera-t-il &agrave; l'heure ??</h1>
+			<h1>Mon <select id="train" placeholder="TGV" onchange="changeTrainType();"></select> sera-t-il &agrave; l'heure ??</h1>
 
 			<section class="clearfix">
 				<label class="depart">Ville de départ</label>
@@ -46,6 +46,7 @@
 		<canvas></canvas>
 
 		<script src="data/tgv.json"></script>
+		<script src="data/intercites.json"></script>
 		<script src="assets/js/app.js"></script>
 
 	</body>
