--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
 		<canvas></canvas>
 
-		<script src="data/tgv.json"></script>
-		<script src="data/intercites.json"></script>
+		<script src="data/donnees.json"></script>
 		<script src="assets/js/app.js"></script>
 
 	</body>
