On garde la ville de départ lors du changement de type de train

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<div id="wrapper" class="clearfix">
-			<h1>Mon <select id="train" placeholder="TGV" onchange="changeTrainType();"></select> sera-t-il &agrave; l'heure ??</h1>
+			<h1>Mon <select id="train" placeholder="TGV" onchange="changeTrainType(depart.value);"></select> sera-t-il &agrave; l'heure ??</h1>
 
 			<section class="clearfix">
 				<label class="depart">Ville de départ</label>
@@ -37,7 +37,7 @@
 				- un train enregistrant un retard de plus de 15 minutes au delà de 3 heures de voyage.<br />
 				<br />
 				Donn&eacute;es issues de <a href="https://ressources.data.sncf.com/explore/dataset/regularite-mensuelle-tgv/information/">https://ressources.data.sncf.com/explore/dataset/regularite-mensuelle-tgv/information/</a><br />
-				Dernière mise à jour: 30 Juillet 2016
+				Dernière mise à jour: 12 Juillet 2016
 			</p>
 		</div>
 
